accessibility/misspelled-attributed-string.html test sometimes throws exceptions https://bugs.webkit.org/show_bug.cgi?id=85081

Reviewed by Darin Adler.

Add in more range checking in case we get back ranges from spell checking that are wrong.

* accessibility/mac/WebAccessibilityObjectWrapper.mm:
(AXAttributeStringSetFont):
(AXAttributeStringSetColor):
(AXAttributeStringSetNumber):
(AXAttributeStringSetBlockquoteLevel):
(AXAttributeStringSetHeadingLevel):
(AXAttributeStringSetElement):



Canonical link: https://commits.webkit.org/103059@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115985 268f45cc-cd09-0410-ab3c-d52691b4dbfc